Main Alert UI Basics
-Added icons for settings + filters
-Created basic toolbar, button, and listview
-Updated colour schemes of app
-Added app icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Klokken</string>
     <string name="ServiceName">ServiceKlokken</string>
+
+    <string name="tool_bar_title_alerts">alerts</string>
+
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
