--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="pref_title_gmail_monitor_today">Only monitor today\'s emails</string>
     <string name="pref_title_check_frequency">Check frequency (minutes)</string>
 
+    <string name="AlertAcknowledgeAlertsMessage">Acknowledge Alerts?</string>
+    <string name="AlertPositive">ACKNOWLEDGE</string>
+    <string name="AlertNegative">REMIND IN 5 MIN</string>
+
     <string-array name="pref_check_frequency_titles">
         <item>1 minute</item>
         <item>3 minutes</item>
