--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,31 +11,29 @@
     <string name="title_activity_settings">Settings</string>
     <string name="pref_header_general">Gmail</string>
 
-    <string name="pref_title_gmail_auto_check">Auto-check for new emails</string>
-    <string name="pref_title_gmail_stop_auto_check_close">Stop auto-check when app closes</string>
+    <string name="pref_gmail_title">Gmail</string>
+    <string name="pref_title_gmail_stop_auto_check_close">Auto-check when app closes</string>
     <string name="pref_title_gmail_monitor_today">Only monitor today\'s emails</string>
-    <string name="pref_title_check_frequency">Check frequency (minutes)</string>
+    <string name="pref_title_check_frequency">Check frequency</string>
 
     <string name="AlertAcknowledgeAlertsMessage">Acknowledge Alert?</string>
     <string name="AlertPositive">ACKNOWLEDGE</string>
     <string name="AlertNegative">IGNORE</string>
 
     <string-array name="pref_check_frequency_titles">
-        <item>1 minute</item>
-        <item>3 minutes</item>
         <item>5 minutes</item>
+        <item>10 minutes</item>
         <item>15 minutes</item>
         <item>30 minutes</item>
         <item>1 hour</item>
         <item>3 hours</item>
         <item>6 hours</item>
-        <item>Never</item>
+        <item>Off</item>
     </string-array>
 
     <string-array name="pref_check_frequency_values">
-        <item>1</item>
-        <item>3</item>
         <item>5</item>
+        <item>10</item>
         <item>15</item>
         <item>30</item>
         <item>60</item>
